# quantum-lego

./: .gitignore  AGENTS.md  BRICK_CONNECTIONS.md  BRICK_COVERAGE.md  DOCUMENTATION.md  DOC_INDEX.md  LICENSE  QUICK_START.md  README.md  VISUAL_GUIDE.md  pyproject.toml
.github/: WORKFLOW_TROUBLESHOOTING.md
.github/aw/: actions-lock.json
.github/workflows/: AGENTS.md  WORKFLOW_FIX_NOTES.md  brick-connections-review.lock.yml  brick-connections-review.md  claude-brick-connections-review.yml  claude-docs-review.yml  claude-examples-review.yml  code-simplifier.lock.yml  code-simplifier.md  daily-file-diet.lock.yml  daily-file-diet.md  daily-repo-status.lock.yml  daily-repo-status.md  docs-review.lock.yml  docs-review.md  examples-review.lock.yml  examples-review.md  functional-pragmatist.lock.yml  functional-pragmatist.md  go-fan.lock.yml  go-fan.md  issue-triage-agent.lock.yml  issue-triage-agent.md  python-fan.lock.yml  python-fan.md  repository-quality-improver.lock.yml  repository-quality-improver.md  semantic-function-refactor.lock.yml  semantic-function-refactor.md  terminal-stylist.lock.yml  terminal-stylist.md  tests-review.lock.yml  tests-review.md  typist.lock.yml  typist.md
docs/: BRICK_CONNECTIONS.md  DOCUMENTATION.md  DOC_INDEX.md  QUICK_START.md  VISUAL_GUIDE.md
examples/: AGENTS.md  README.md  __init__.py  check_results.py  common_structures.py  demo_rich_console.py  list_examples.py  run_batch_dos.py  run_dos.py  run_two_structures.py
examples/01_getting_started/: README.md  check_results.py  single_vasp.py
examples/02_dos/: README.md  batch_dos.py  single_dos.py
examples/03_batch/: README.md  compare_structures.py  dynamic_batch_example.py
examples/04_sequential/: README.md  mixed_dos_sources.py  relax_then_dos.py
examples/05_convergence/: README.md  encut_kpoints.py
examples/06_surface/: README.md  formation_enthalpy_example.py  o2_reference_example.py  surface_enumeration.py  surface_gibbs_example.py  thickness_convergence.py
examples/07_advanced_vasp/: README.md  bader_analysis.py  birch_murnaghan_sno2.py  fukui_indices.py  hubbard_u_nio.py  hubbard_u_nio_afm_supercell.py  hubbard_u_sno2.py  hybrid_bands_and_dos_sno2.py  neb_pipeline.py  plot_workgraph_bands_and_dos.py  sequential_relax_then_u.py
tests/: conftest.py  test_aimd_lvel_fix.py  test_aimd_velocity_injection.py  test_console.py  test_eos_enhancements.py  test_hubbard_u_calculation.py  test_lego_aimd_integration.py  test_lego_aimd_trajectory_concatenation.py  test_lego_batch_integration.py  test_lego_bricks.py  test_lego_concurrent_and_outputs.py  test_lego_connections.py  test_lego_dos_integration.py  test_lego_results.py  test_lego_sequential_integration.py  test_lego_validation.py  test_lego_vasp_integration.py  test_public_api.py  test_workflow_utils.py
(+176 files in other folders)
