[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum_lego"
version = "0.1.0"
description = "Modular building blocks for AiiDA workflows (VASP, QE, CP2K)"
readme = "README.md"
authors = [{ name = "Thiago Trevizam" }]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiida-core>=2.0",
    "aiida-workgraph==1.0.0b3",
    "aiida-vasp",
    "pymatgen",
    "ase",
    "numpy",
    "rich>=13.0.0",
    "questionary>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["quantum_lego*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start permissive
disallow_any_explicit = false  # Allow explicit Any
disallow_any_generics = false  # Don't require List[T] yet
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true

# Ignore AiiDA modules (no stubs)
[[tool.mypy.overrides]]
module = "aiida.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiida_vasp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiida_workgraph.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ase.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pymatgen.*"
ignore_missing_imports = true

# Gradually enable strict checking for new modules
[[tool.mypy.overrides]]
module = "quantum_lego.core.types"
disallow_untyped_defs = true
disallow_any_explicit = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "quantum_lego.core.console"
disallow_untyped_defs = true  # Already 100% typed!

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
